# unofficial-scripts

./: .gitignore  README.md  package.json  pyproject.toml
.tmp/: homework_submit_failed.txt
tests/: test_unofficial_scripts.py
unofficial_scripts/: homework_submit_failed.py
