[tool.poetry]
name = "unofficial-scripts"
version = "0.1.0"
description = ""
authors = ["feizheng <1290657123@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
jsw-nx = "^1.0.29"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
